# hfsutils

./: .editorconfig   .gitattributes  .gitignore  BUILD.md  BUILD_SYSTEM_SUMMARY.md  CHANGELOG.md  CHANGES  COPYRIGHT  DEPENDENCY_RESOLUTION_SUMMARY.md  EMBEDDED_REORGANIZATION_SUMMARY.md  HFS_PLUS_IMPLEMENTATION_SUMMARY.md  INSTALL  MKFS_TEST_RESULTS.md  Makefile  Makefile.in  Makefile.standalone  PACKAGING.md  PROJECT_STRUCTURE.md  README.md  TASK_3.4_COMPLETION_SUMMARY.md  TEST_RESULTS.md  TODO  build.sh  build.standalone.sh  clean.sh  config.h.in  config.mk  configure.ac  configure.in  configure.standalone  fsck.hfsplus  tclhfs.c  test_build.sh  test_fsck_enhanced.sh  test_hfsplus_complete.sh
.github/: README.md  copilot-instructions.md
.github/workflows/: ci.yml
.kiro/specs/separate-mkfs-fsck/: design.md  requirements.md  tasks.md
config/: Makefie.in  configure.in
doc/: DEVELOPMENT_HISTORY.md  HFS_CLASSIC_SPECIFICATION.md  HFS_IMPLEMENTATION_NOTES.md  README.md  TN1150_HFS_PLUS_VOLUME_FORMAT.md  WIKIPEDIA_HFS_PLUS.md
doc/latex/: hfsutils-manual.tex
doc/latex/chapters/: 00-history.tex  01-introduction.tex  02-hfs-specification.tex  03-hfs-plus-specification.tex  04-mkfs-utilities.tex  05-fsck-utilities.tex  06-mount-utilities.tex  07-hfsutil-commands.tex  08-implementation-details.tex  09-testing-validation.tex  10-appendix.tex
doc/man/: fsck.hfs+.8  fsck.hfs.8  fsck.hfsplus.8  mkfs.hfs+.8  mkfs.hfs.1  mkfs.hfs.8  mkfs.hfsplus.8  mount.hfs+.8  mount.hfs.8  mount.hfsplus.8
hfsck/: Makefile  Makefile.in  config.h  config.h.in  configure  configure.ac  hfsck  hfsck.c  hfsutil  journal.c  journal.h  main.c  util.c
include/: config.h
include/common/: hfs_detect.h
include/hfsutil/: hfsplus_format.h
libhfs/: Makefile  Makefile.in  config.h  config.h.in  configure  configure.ac  volume.c
libhfs/os/: unix.c
librsrc/: Makefile  Makefile.in  config.h  config.h.in  configure  configure.ac
scripts/: configure
src/binhex/: binhex.c
src/common/: charset.c  copyin.c  copyout.c  crc.c  darray.c  dlist.c  dstring.c  glob.c  hcwd.c  hfs_detect.c  hfsplus_format.c  strdup.c  strerror.c  strstr.c  strtol.c  suid.c  version.c
src/embedded/: Makefile  README.md
src/embedded/fsck/: fsck_hfs.h  hfs_check.c
src/embedded/mkfs/: hfs_format.c  mkfs_hfs.h
src/embedded/mount/: hfs_mount_util.c  mount_hfs.h
src/embedded/shared/: common_utils.c  common_utils.h  device_utils.c  device_utils.h  error_utils.c  error_utils.h  hfs_common.h  hfs_detect.c  hfs_detect.h  hfs_mount.c  hfs_utils.c  hfs_utils.h  hfsplus_format.c  hfsutil_mkfs.c  libhfs.h  stubs.c  suid.c  volume_mkfs.c
src/fsck/: Makefile  README.md  fsck_common.c  fsck_common.h  fsck_hfs_main.c  fsck_hfsplus_main.c  fsck_main.c  hfsplus_check.c  journal.c  journal.h
src/hfsutil/: hattrib.c  hcd.c  hcopy.c  hdel.c  hformat.c  hfsutil.c  hls.c  hmkdir.c  hmount.c  hpwd.c  hrename.c  hrmdir.c  humount.c  hvol.c
src/mkfs/: Makefile  README.md  mkfs_common.c  mkfs_common.h  mkfs_hfs_format.c  mkfs_hfs_main.c  mkfs_hfsplus_main.c  simple_test.c
src/mount/: Makefile  README.md  mount.hfs+  mount_common.h  mount_hfs.c  mount_hfsplus.c  mount_main.c
src/tests/: test_mkfs.sh  test_mkfs_comprehensive.sh  test_new_options.sh  test_proper_methodology.sh
test/: README.md  generate_test_data.sh  run_tests.sh  simple_integration_test.sh  test_exit_codes.sh  test_fsck.sh  test_hcopy_directory.sh  test_hcopy_manual.sh  test_hcopy_manual_clean.sh  test_hcopy_recursive.sh  test_hcopy_simple.sh  test_hfs_integrity.sh  test_hfs_spec_validation.sh  test_hfsplus_complete.sh  test_hfsutils.sh  test_journaling.sh  test_mkfs.sh  test_recursive_integrity.sh  test_spec_conformance.sh  validate_build.sh
test/lib/: validation.sh
tests/: README.md
tests/integration/mkfs/: test_mkfs_basic.sh  test_mkfs_cli_compatibility.sh
tests/unit/mkfs/: test_mkfs_common.c
