dnl -*- shell-script -*-
dnl
dnl hfsutils - tools for reading and writing Macintosh HFS volumes
dnl Copyright (C) 1996-1998 Robert Leslie
dnl
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
dnl
dnl $Id: configure.in,v 1.10 1998/09/15 19:19:42 rob Exp $
dnl

AC_INIT(libhfs/libhfs.h)
AC_CONFIG_HEADER(config.h)

AC_CONFIG_SUBDIRS(libhfs librsrc)


dnl Checks for programs.

AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_PROG_GCC_TRADITIONAL

dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h fcntl.h termios.h sys/ioctl.h)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_TYPE_UID_T
AC_TYPE_SIZE_T

AC_C_CONST

dnl Checks for library functions.

AC_REPLACE_FUNCS(strdup strerror strstr strtol)
AC_CHECK_FUNCS(setreuid)

AC_CACHE_CHECK(for sys_errlist, hfs_cv_decl_syserrlist, [
    AC_TRY_LINK([], [
	extern char *sys_errlist[];
	extern int sys_nerr;

	sys_errlist[sys_nerr - 1][0] = 0;
    ], hfs_cv_decl_syserrlist=yes, hfs_cv_decl_syserrlist=no)
])

if test "$hfs_cv_decl_syserrlist" = yes
then
    AC_DEFINE(HAVE_SYS_ERRLIST)
fi

dnl Prepare target variables.

MAKE_TARGETS=""
INSTALL_TARGETS=""

AC_SUBST(MAKE_TARGETS)
AC_SUBST(INSTALL_TARGETS)


dnl Other options.

AC_ARG_ENABLE(cli,
    [  --disable-cli           do not build or install the command-line utils])

if test "x$enable_cli" != xno
then
    MAKE_TARGETS="all_cli $MAKE_TARGETS"
    INSTALL_TARGETS="install_cli $INSTALL_TARGETS"
fi

AC_ARG_ENABLE(devlibs,
    [  --enable-devlibs        enable installation of the developer libraries])

if test "x$enable_devlibs" = xyes
then
    MAKE_TARGETS="$MAKE_TARGETS all_lib"
    INSTALL_TARGETS="$INSTALL_TARGETS install_lib"
fi

AC_ARG_ENABLE(debug,
    [  --enable-debug          enable diagnostic debugging support])

if test "x$enable_debug" = xyes
then
    AC_DEFINE(DEBUG)
fi

dnl Create output files.

AC_OUTPUT(hfsck/Makefile linux/Makefile Makefile)
